# latexdiff-bot

./: .gitignore  README.md  alwaysrun.sh  bot.py  config.py  pyproject.toml  self-update.sh
core/: fig_diff.ipynb
core/test_latex/: main_old.tex
latexdiff_bot/: bot.py  bot2.py  bot3.py  bot4.py  bot5.py  bot6.py  collage.py  findmain.py  makediff.py  pydiff.py  redundant_makediff.py  settings.py  user_settings.json
latexdiff_bot/new/: main_sm.tex
latexdiff_bot/old/: main.tex  refs.bib
notebooks/: check_version.ipynb  image_analyzer.ipynb
notebooks/test_latex/: achemso_ref.bib  main.tex
test/: collage.py  makediff.py  testing.ipynb
