[tool.poetry]
name = "latexdiff-bot"
version = "0.1.0"
description = ""
authors = ["Ivan Toftul <toftul.ivan@gmail.com>"]
readme = "README.md"
packages = [{include = "latexdiff_bot"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
