[tool.poetry]
name = "latexdiff-bot"
version = "0.1.0"
description = ""
authors = ["Ivan Toftul <toftul.ivan@gmail.com>"]
readme = "README.md"
packages = [{include = "latexdiff_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.*"
icecream = "^2.*"
Pillow = "^9.*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
